--- a/app/views/admin/editor_permissions/new.html.erb
+++ b/app/views/admin/editor_permissions/new.html.erb
@@ -1,3 +1,7 @@
 <!-- app/views/admin/editor_permissions/new.html.erb -->
+<% breadcrumb :admin_editor_permissions %>
+<% breadcrumb :new_admin_editor_permission %>
+<%= render "shared/breadcrumbs" %>
+
 <h1 class="text-2xl font-bold mb-6">編集権限を付与</h1>
 <%= render "form" %>
