--- a/app/views/admin/pre_codes/show.html.erb
+++ b/app/views/admin/pre_codes/show.html.erb
@@ -1,3 +1,7 @@
+<% breadcrumb :admin_pre_codes %>
+<% breadcrumb :admin_pre_code, @pre_code %>
+<%= render "shared/breadcrumbs" %>
+
 <% content_for :title, "PreCode詳細" %>
 
 <div class="mx-auto w-full max-w-3xl space-y-6">
