--- a/app/views/admin/quiz_questions/index.html.erb
+++ b/app/views/admin/quiz_questions/index.html.erb
@@ -1,3 +1,6 @@
+<% breadcrumb :admin_quiz_questions %>
+<%= render "shared/breadcrumbs" %>
+
 <h1 class="text-xl font-bold mb-4">Quiz Questions</h1>
 
 <div class="mb-3">
