--- a/app/views/admin/quiz_sections/edit.html.erb
+++ b/app/views/admin/quiz_sections/edit.html.erb
@@ -1,2 +1,6 @@
+<% breadcrumb :admin_quiz_sections %>
+<% breadcrumb :admin_quiz_section_edit, @quiz_section %>
+<%= render "shared/breadcrumbs" %>
+
 <h1 class="text-xl font-bold mb-4">Quiz セクションを編集</h1>
 <%= render "form" %>
