--- a/app/views/admin/quiz_sections/new.html.erb
+++ b/app/views/admin/quiz_sections/new.html.erb
@@ -1,2 +1,6 @@
+<% breadcrumb :admin_quiz_sections %>
+<% breadcrumb :admin_quiz_section_new %>
+<%= render "shared/breadcrumbs" %>
+
 <h1 class="text-xl font-bold mb-4">Quiz セクションを作成</h1>
 <%= render "form" %>
