--- a/app/views/admin/quizzes/index.html.erb
+++ b/app/views/admin/quizzes/index.html.erb
@@ -1,4 +1,7 @@
 <!-- app/views/admin/quizzes/index.html.erb -->
+<% breadcrumb :admin_quizzes %>
+<%= render "shared/breadcrumbs" %>
+
 <h1 class="text-xl font-bold mb-4">Quizzes</h1>
 
 <div class="mb-3">
