--- a/app/views/admin/quizzes/new.html.erb
+++ b/app/views/admin/quizzes/new.html.erb
@@ -1,3 +1,7 @@
 <!-- app/views/admin/quizzes/new.html.erb -->
+<% breadcrumb :admin_quizzes %>
+<% breadcrumb :admin_quiz_new %>
+<%= render "shared/breadcrumbs" %>
+
 <h1 class="text-xl font-bold mb-4">Quiz を作成</h1>
 <%= render "form" %>
