--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,4 +1,8 @@
 <!-- app/views/profiles/edit.html.erb -->
+<% breadcrumb :profile %>
+<% breadcrumb :profile_edit %>
+<%= render "shared/breadcrumbs" %>
+
 <% content_for :title, "プロフィール編集" %>
 <h1 class="text-xl font-semibold mb-4">プロフィール編集</h1>
 
