--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,4 +1,7 @@
 <!-- app/views/profiles/show.html.erb -->
+<% breadcrumb :profile %>
+<%= render "shared/breadcrumbs" %>
+
 <% content_for :title, "プロフィール" %>
 
 <div class="mx-auto w-full max-w-2xl space-y-6">
