--- a/app/views/admin/quiz_questions/new.html.erb
+++ b/app/views/admin/quiz_questions/new.html.erb
@@ -1,2 +1,6 @@
+<% breadcrumb :admin_quiz_questions %>
+<% breadcrumb :admin_quiz_question_new %>
+<%= render "shared/breadcrumbs" %>
+
 <h1 class="text-xl font-bold mb-4">Quiz 問題を作成</h1>
 <%= render "form" %>
