--- a/app/views/quizzes/sections/questions/answer.html.erb
+++ b/app/views/quizzes/sections/questions/answer.html.erb
@@ -1,14 +1,19 @@
-<!-- app/views/quizzes/sections/questions/answer.html.erb -->
+<% breadcrumb :quizzes %>
+<% breadcrumb :quiz, @quiz %>
+<% breadcrumb :quiz_section_public, @quiz, @section %>
+<% breadcrumb :quiz_question_answer_page, @quiz, @section, @question %>
+<%= render "shared/breadcrumbs" %>
+
 <% correct = (params[:choice].to_i == @question.correct_choice) %>
-<div class="rounded border p-4 bg-white">
+<div class="rounded border p-4 bg-white" data-controller="code-highlight">
   <p class="<%= correct ? 'text-emerald-700' : 'text-red-700' %> font-semibold">
     <%= correct ? "正解！" : "不正解…" %>
   </p>
   <p class="mt-1 text-sm">正解：<%= @question.public_send("choice#{@question.correct_choice}") %></p>
 
-  <div class="mt-3 p-3 rounded bg-slate-50">
+  <div class="mt-3 p-3 rounded bg-slate-50 content-body">
     <h3 class="font-semibold mb-1">解説</h3>
-    <p><%= simple_format @question.explanation %></p>
+    <div><%= rich_html(@question.explanation) %></div>
   </div>
 
   <div class="flex justify-between mt-4">
